<resources>
    <string name="app_name">ShowSace</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn">Войти</string>
    <string name="email_auth">Электронная почта</string>
    <string name="password_auth">Пароль</string>
    <string name="title_activity_main">ShowSace</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="clear">clear</string>
    <string name="basket">basket</string>
    <string name="next">далее</string>
    <string name="st100rub">стоимость доставки: 100р</string>
    <string name="itogo">Итого:</string>
    <string name="mainmenu">главное меню</string>
    <string name="radioBtn_xl">самовывоз ТК XL - бесплатно</string>
    <string name="radioBtn_tel">договориться по телефону - 100р.</string>
    <string name="radioBtn_addr">доставить по адресу - 100р.</string>
    <string name="vvedite_addr">Введите адрес</string>
    <string name="zakazat">заказать</string>
    <string name="empty" />
    <string name="registration">регистрация</string>
    <string name="forgot">забыл пароль</string>
    <string name="e_mail">введите ваш e-mail</string>
    <string name="e_mail2">e-mail</string>
    <string name="sendPassword">выслать пароль</string>
</resources>
