<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.rus.showsace.fragments.LoginFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="240dp"
        app:srcCompat="@drawable/logosc"
        android:id="@+id/imageView6" />

    <EditText
        android:id="@+id/login_ET"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/email_auth"/>
    <EditText
        android:id="@+id/password_ET"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/password_auth"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:background="#7851b3"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="40sp"
        android:text="@string/login_btn"/>

    <TextView
        android:text="@string/registration"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:id="@+id/textViewReg"
        android:onClick="regClick" />

    <TextView
        android:text="@string/forgot"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:id="@+id/textViewForgot" />

</LinearLayout>
