<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.rus.showsace.activities.ForgotActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/e_mail2"
        android:ems="10"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextForgot" />

    <TextView
        android:text="@string/e_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_above="@+id/editTextForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />

    <Button
        android:text="@string/sendPassword"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:id="@+id/buttonSendPass"
        android:background="#7851b3"
        android:textColor="#ffffff"
        android:layout_below="@+id/editTextForgot"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/sendpass"
        android:id="@+id/imageView7"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
